# band-sdk-python

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INT-829-plan.md  LICENSE  MANUAL_TEST_INT829.md  MIGRATING-v0.3.0.md  README.md  agent_config.yaml.example  conftest.py  docker-compose.yml  parlant_validation_report.md  pyproject.toml  release-please-config.json
.band/: changelog.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: letta-lane-local.sh  setup-codex.sh  setup-copilot.sh  setup-letta.sh  setup-opencode.sh
.github/workflows/: back-merge-main-to-dev.yml  band-publish.yml  baseline-l0-live.yml  baseline-l1-live.yml  baseline-l2-live.yml  baseline-l3-live.yml  baseline-l4-live.yml  changelog.yml  ci.yml  e2e.yml  kit-image-rebuild.yml  kit-publish-manual.yml  kit-publish-smoke.yml  kit-publish.yml  kit-release-validation.yml  pr-title.yml  promote-dev-to-main.yml  publish-band-manual.yml  release.yml
Drafts/: gemini-auth-requirements.md  google-auth-gcloud-adc.md  pr-311-band-rename-comment.md  pr-312-comment.md  slack-qa-update.md
band-bridge/: .env.example  Dockerfile  docker-compose.yml
band-bridge/bridge_core/: __init__.py  __main__.py  bridge.py  config.py  control.py  forwarder.py  health.py
docker/band_python_kit/: Dockerfile  README.md  RELEASING.md  entrypoint.sh  spec.yaml
docker/band_python_kit/echo-agent/: .gitignore  README.md  band.yaml  main.py  pyproject.toml  secrets.env.example
docker/claude_sdk/: Dockerfile  entrypoint.sh  runner.py
docker/codex/: Dockerfile  entrypoint.sh  runner.py
docker/letta/: runner.py
docs/: agno-adapter-flow.md  baseline-e2e-coverage-plan.md  ci-cd-workflows.md  int-979-kit-release-catalog-plan.md
docs/adapters/: anthropic.md  claude_sdk.md  codex.md  langgraph.md
docs/baseline-conformance/: tier1-injection-contract.md
docs/parity/: README.md  REQ-PY-01-openai-adapter.md  REQ-PY-02-generic-adapter.md  REQ-PY-03-linear-bridge.md  REQ-PY-04-tool-calling-base-refactor.md
docs/plans/: agno-per-room-tool-leak-fix.md
examples/: run_agent.py
examples/20-questions-arena/: README.md  guesser_agent.py  prompts.py  setup_logging.py  start_game.py  thinker_agent.py
examples/a2a_bridge/: 01_basic_agent.py  02_with_auth.py  README.md  setup_logging.py
examples/a2a_gateway/: 01_basic_gateway.py  02_with_demo_agent.py  README.md  setup_logging.py
examples/acp/: 01_basic_acp_server.py  02_acp_client.py  03_acp_server_with_routing.py  04_acp_client_rich_streaming.py  05_acp_server_push_notifications.py  06_cursor_client.py  07_jetbrains_server.py  08_acp_bridge_architecture.py  README.md  setup_logging.py
examples/agentcore/: ARCHITECTURE.md  BUILDING.md  Dockerfile  README.md  agent_config.yaml.example  agentcore_llm_server.py  run_agentcore.py  verify_demo.py  verify_deployment.py
examples/agno/: 01_basic_agent.py  02_tool_reporting.py  03_tom_agent.py  03_tom_and_jerry.py  04_jerry_agent.py  04_memory_secretary.py  05_agno_db_history.py  05_memory_secretary.py  06_agno_db_history.py  README.md
examples/anthropic/: 01_basic_agent.py  02_custom_instructions.py  03_tom_agent.py  04_jerry_agent.py  05_contact_management.py  README.md  setup_logging.py
examples/claude_sdk/: 01_basic_agent.py  02_extended_thinking.py  03_tom_agent.py  04_jerry_agent.py  README.md  __init__.py  setup_logging.py
examples/claude_sdk_docker/: Dockerfile  README.md  create_agents.py  docker-compose.yml  example_agent.yaml  runner.py  test_communication.py
examples/codex/: .env.plan-review.example  01_basic_agent.py  02_tom_agent.py  03_jerry_agent.py  docker-compose.multi.yml  docker-compose.plan-review.yml  docker-compose.yml  setup_logging.py
examples/coding_agents/: .env.example  README.md  agent_config.yaml.example  create_agents.py  docker-compose.yml  test_communication.py
examples/copilot_sdk/: 01_basic_agent.py  02_byok_anthropic.py  03_tom_agent.py  04_jerry_agent.py  05_contact_and_memory_agent.py  06_ask_user.py  README.md  __init__.py  setup_logging.py
examples/crewai/: 01_basic_agent.py  02_role_based_agent.py  03_coordinator_agent.py  04_research_crew.py  05_tom_agent.py  06_jerry_agent.py  07_contact_and_memory_agent.py  08_flow_router.py  09_flow_custom_tools.py  10_memory_tool_usage.py  README.md  README_flow_adapter.md  setup_logging.py
examples/docker_demo/: .demo.env.example  .gitignore  Dockerfile.cli  README.md  breaker.py  conductor.py  launch.sh  provision.py
examples/gemini/: 01_basic_agent.py
examples/google_adk/: 01_basic_agent.py  02_custom_instructions.py  03_custom_tools.py  setup_logging.py
examples/langgraph/: 01_simple_agent.py  02_custom_tools.py  03_custom_personality.py  04_calculator_as_tool.py  05_rag_as_tool.py  06_delegate_to_sql_agent.py  07_tom_agent.py  08_jerry_agent.py  09_memory_tool_usage.py  09_research_ops_orchestrator.py  10_memory_tool_usage.py  11_no_llm_graph.py  README.md  VALIDATION.md  prompts.py  setup_logging.py  standalone_calculator.py  standalone_rag.py  standalone_sql_agent.py
examples/letta/: 01_basic_agent.py  docker-compose.yml  setup_logging.py
examples/mixed/: 01_strategy_coordinator.py  02_draft_writer.py  03_fact_checker_a2a.py  04_risk_reviewer_a2a.py  05_a2a_bridge.py  README.md  agents.yaml.example  (+1 more)
scripts/: check-lock-age.py  registry-ref-state.py  stamp-kit-spec.py
src/: __init__.py
tests/: README.md  baseline_adapter_scorecard.py  baseline_l1_fixtures.py  conftest.py  conftest_integration.py  loaders.py  paths.py  test_agent.py  test_agent_contacts.py  test_band_import.py  test_capability_gating_e2e.py  test_config.py  test_env_gates.py  test_integrations_base.py  test_logging_config.py  test_no_clean_mode.py  test_platform_runtime.py  test_prompts.py  test_readme_snippets.py  test_run_agent.py  test_session_config.py  test_session_shutdown.py  test_session_sync.py  test_smoke.py  test_source_hygiene.py
thenvoi-bridge/: .env.example  langchain_agent_server.py  test_platform.py
(+1299 files in other folders)
