[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "band-sdk"
version = "0.2.11"
description = "A Python SDK for Band API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "band.ai" }]
license = { text = "MIT" }
keywords = ["sdk", "band", "api", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "thenvoi-client-rest==0.0.7",
    "phoenix-channels-python-client>=0.2.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
codex = [
    "websockets>=13.0",
]
opencode = [
    "httpx>=0.24.0",
]
letta = [
    "letta-client>=0.1.0",
]
pydantic-ai = [
    "pydantic-ai-slim[anthropic]>=1.56.0",
    "openai>=2.41.1",
]
anthropic = [
    "anthropic>=0.75.0",
]
langgraph = [
    "langchain>=1.0.0",
    "langchain-core>=1.2.11",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.0",  # 0.4.0+ required for langchain 1.0 compatibility
    "langchain-text-splitters>=0.3.0",
    "openai>=2.41.1",
    "beautifulsoup4>=4.12.0",
]
claude_sdk = [
    "claude-agent-sdk>=0.1.16",  # Requires Node.js 20+ and @anthropic-ai/claude-code CLI
]
parlant = [
    "parlant>=3.0.0",
    "openai>=2.41.1",
    "werkzeug>=3.1.6",
]
crewai = [
    "crewai==1.14.3",
    "openai>=2.41.1",  # crewai 1.14.3 requires openai>=2.0.0
    "nest-asyncio>=1.6.0",  # Required for sync-to-async bridging in CrewAI tools
    "pillow>=12.1.1",
]
gemini = [
    "google-genai>=1.43.0",  # httpx is a transitive dep used for retry exception types
]
a2a = [
    "a2a-sdk>=0.3.22",  # Official A2A Python SDK; brings protobuf>=5.29.5 transitively
]
a2a_gateway = [
    "a2a-sdk>=0.3.22",  # Official A2A Python SDK; brings protobuf>=5.29.5 transitively
    "starlette>=0.40.0",  # HTTP server framework
    "uvicorn>=0.32.0",  # ASGI server
    "python-multipart>=0.0.22",
]
a2a_gateway_demo = [
    "a2a-sdk>=0.3.22",      # A2A client for calling gateway peers
    "starlette>=0.40.0",    # HTTP server
    "uvicorn>=0.32.0",      # ASGI server
    "langgraph>=1.0.0",     # LangGraph for orchestrator agent
    "langchain-openai>=0.3.0",  # OpenAI model for LLM
    "click>=8.0.0",         # CLI for demo orchestrator
]
acp = [
    "agent-client-protocol>=0.9.0",  # ACP Python SDK
    "mcp>=1.25.0",
    "starlette>=0.40.0",
    "uvicorn>=0.32.0",
]
slack = [
    "slack-sdk>=3.27.0",     # AsyncWebClient, signature verifier, Socket Mode
    "starlette>=0.40.0",     # HTTP server framework
    "uvicorn>=0.32.0",       # ASGI server
    "aiohttp>=3.9,<4",       # Socket Mode transport (slack_sdk.socket_mode.aiohttp)
]
bridge = [
    "aiohttp>=3.9,<4",      # Health check HTTP server
    "python-dotenv>=1.2.2",    # Environment variable loading
    "httpx>=0.24.0",        # HTTPForwarder transport
]
bridge_agentcore = [
    # Duplicates bridge deps intentionally — pip extras cannot depend on
    # sibling extras, so we list them explicitly here.
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.2.2",
    "httpx>=0.24.0",
    "boto3>=1.35.0",        # AgentCoreForwarder transport
]
agentcore_runtime = [
    # Deps for the container hosted by Bedrock AgentCore Runtime
    # (examples/agentcore/agentcore_llm_server.py). Combine with the
    # adapter extra of your choice (e.g. anthropic).
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
google_adk = [
    "google-adk>=1.0.0,<2",
]

# dev extra includes ALL framework deps for testing EXCEPT crewai,
# which conflicts with both parlant and pydantic-ai (see tool.uv.conflicts).
# To run crewai tests, install with: uv sync --extra dev-crewai
dev = [
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-rerunfailures>=14.0.0",
    "pytest-timeout>=2.4.0",
    "thenvoi-testing-python==0.1.4",
    "httpx>=0.24.0",  # Already in main deps, for mocking
    # Include pydantic-ai for testing
    "pydantic-ai-slim>=1.56.0",
    # Include anthropic for testing
    "anthropic>=0.75.0",
    # Include claude_sdk for testing
    "claude-agent-sdk>=0.1.16",
    # Include langgraph for testing
    "langchain>=1.0.0",
    "langchain-core>=1.2.11",
    "langgraph>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=2.41.1",
    "beautifulsoup4>=4.12.0",
    # Include a2a-sdk for testing
    "a2a-sdk>=0.3.22",
    # Include a2a_gateway deps for testing
    "starlette>=0.40.0",
    "uvicorn>=0.32.0",
    # Include a2a_gateway_demo deps for testing
    "click>=8.0.0",
    # Include parlant for testing
    "parlant>=3.0.0",
    "werkzeug>=3.1.6",
    # Include ACP deps for testing
    "agent-client-protocol>=0.9.0",
    "mcp>=1.25.0",
    # Include Slack deps for testing
    "slack-sdk>=3.27.0",
    # Include Gemini SDK for testing
    "google-genai>=1.43.0",
    # Include google-adk for testing
    "google-adk>=1.0.0,<2",
    # Include bridge deps for testing
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.2.2",
    # Include bridge_agentcore deps for testing
    "boto3>=1.35.0",
    # Development tools
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
    "pyrefly>=0.18.0",
    "commitizen>=3.13.0",
    "pytest-markdown-docs>=0.9.2",
]

# CrewAI-only dev extra for testing crewai adapter in isolation.
# Cannot be combined with dev/parlant/pydantic-ai due to pydantic + opentelemetry conflicts.
dev-crewai = [
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-rerunfailures>=14.0.0",
    "pytest-timeout>=2.4.0",
    "thenvoi-testing-python==0.1.4",
    "httpx>=0.24.0",
    # CrewAI and its deps
    "crewai==1.14.3",
    "openai>=2.41.1",
    "nest-asyncio>=1.6.0",
    "pillow>=12.1.1",
    # Development tools
    "ruff>=0.8.0",
    "pyrefly>=0.18.0",
]

[project.scripts]
band-acp = "band.integrations.acp.cli:entry_point"
band-trigger = "band.cli.trigger:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["band", "band.*"]
namespaces = false

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"band.integrations.slack" = ["templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-v"
# Global safety net: catch runaway unit tests. Integration and E2E tests
# override to 120s via pytest_collection_modifyitems in their conftest.
timeout = 30
markers = [
    "requires_api: marks tests as requiring real API credentials (skipped in CI)",
    "e2e: marks tests as end-to-end (requires live services)",
]

[tool.uv]
# Ensure uv.lock stays installable on the platforms we use locally and in CI
# when a dependency only publishes wheels and no source distribution.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# crewai 1.14.3 conflicts with BOTH parlant and pydantic-ai:
#   - parlant >=3.1 requires opentelemetry-sdk >=1.37, crewai 1.14.3 pins ~=1.34.0
#   - pydantic-ai-slim >=1.61 requires pydantic>=2.12, crewai 1.14.3 pins pydantic~=2.11.9
# Declaring them as conflicting extras lets uv resolve each in a separate fork.
conflicts = [
    [
        { extra = "crewai" },
        { extra = "parlant" },
    ],
    [
        { extra = "crewai" },
        { extra = "pydantic-ai" },
    ],
    [
        { extra = "dev" },
        { extra = "crewai" },
    ],
    [
        { extra = "dev" },
        { extra = "dev-crewai" },
    ],
    [
        { extra = "dev-crewai" },
        { extra = "parlant" },
    ],
    [
        { extra = "dev-crewai" },
        { extra = "pydantic-ai" },
    ],
]

[tool.pyrefly]
project_includes = [
    "src/**/*.py",              # Only check source files
]
project_excludes = [
    "tests/**",                 # Tests use mocks with duck typing
    "examples/**",              # Examples use local imports
    "band-bridge/**",        # Standalone bridge app, not in src/ import root
]
# CrewAI is in a conflict group with parlant/pydantic-ai and not installed in
# the default venv. Rather than excluding the files (which loses type coverage
# in a dev-crewai venv), tell pyrefly to treat missing crewai modules as Any.
ignore-missing-imports = [
    "crewai.*",
    "nest_asyncio",
]
# Disable the default **/.[!/.]*/** exclude so pyrefly works inside
# .claude/worktrees/ (git worktree paths contain a hidden directory).
disable-project-excludes-heuristics = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
version_files = [
    "pyproject.toml:version",
    "src/band/__init__.py:__version__",
]
# Tag format aligned with release-please (package-name-v$version)
tag_format = "band-sdk-python-v$version"
